--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -webkit-touch-callout: none; /* Prevent iOS callout menu on long-press */
+   /* -webkit-touch-callout: none; /* Prevent iOS callout menu on long-press */
     /* Remove this line to restore default tap highlight */
     /* -webkit-tap-highlight-color: transparent; */
 }
