--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ header {
 }
 
 .red {
-    color: #FF0000 !important; /* Using the same red as limited-text */
+    color: #ff1111 !important; /* Using the same red as limited-text */
 }
 
 .blue {
