--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,14 @@ body {
     margin: 0 auto;
 }
 
+.visually-hidden {
+    position: absolute !important;
+    height: 1px; width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap;
+  }
+
 .container {
     width: 100%;
     position: relative;
