--- a/styles.css
+++ b/styles.css
@@ -1077,7 +1077,8 @@ footer {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 2px;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
 }
 
